<resources>
    <string name="app_name">City Guide</string>
    <string name="share_fail">Share failed</string>

    <!--Volley Errors-->
    <string name="error_no_internet_connection">@string/noInternet</string>
    <string name="error_timeout">@string/errorMsg</string>
    <string name="error_unknown_error_occurred">@string/somethingWrong</string>
    <string name="error_server_error">@string/somethingWrong</string>
    <string name="somethingWrong">Sorry, Something went wrong</string>
    <string name="noInternet">No internet connection.</string>
    <string name="errorMsg">Service unavailable. Please try again later.</string>
    <string name="phone_mail">Phone or Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="phone_cant_empty">Phone can\'t be empty</string>
    <string name="password_cant_empty">Password can\'t be empty</string>
    <string name="open_internet_and_try_again">Open internet and try again!</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="mail_phone_warning">You need to set a phone or mail.</string>
    <string name="conf_pass_must_equal_pass">Confirm password must match password</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="ok">OK</string>
    <string name="phone_or_mail_exists">Phone or email exists</string>
    <string name="go_back">Go back</string>
    <string name="country">Country</string>
    <string name="select">Select</string>
    <string name="must_choose_country">Must choose country</string>
    <string name="no_data_available">No data available</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="hotels_desc">Find hotels around you!</string>
    <string name="restaurants_desc">Find restaurants around you!</string>
    <string name="all">All</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="no_hotels_found">No Hotels Found!</string>
    <string name="filter">Filter</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="no_restaurants_found">No restaurants found</string>
    <string name="apply">Apply</string>
    <string name="recommended">Recommended</string>
    <string name="sort">Sort</string>
    <string name="a_z">A - Z</string>
    <string name="z_a">Z - A</string>
    <string name="find">Find</string>
    <string name="avg_price">Average Price</string>
    <string name="from">From</string>
    <string name="_0">0</string>
    <string name="to">To</string>
    <string name="average_room_price">"Average room price: "</string>
    <string name="roomType">Room type</string>
    <string name="single">Single</string>
    <string name="doubleT">Double</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="logout">Logout</string>
    <string name="book">Book</string>
    <string name="days">Number of days</string>
    <string name="room_type">Room Type</string>
    <string name="persons">Persons</string>
    <string name="singleA">Single</string>
    <string name="doubleA">Double</string>
    <string name="booked_success">Room booked successfully</string>
    <string name="book_room">Book Room</string>
    <string name="reservation">Reservation</string>
    <string name="reservations">Reservations</string>
    <string name="start_at">Start at</string>
    <string name="end_at">End at</string>
    <string name="set_start_end_date_book">You have to set start and end date</string>
</resources>
