<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlAddRateContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".restaurants.FilterActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/margin_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                style="@style/FontSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_top_curved_overlay"
                android:gravity="center"
                android:paddingTop="@dimen/padding_xlarge"
                android:paddingBottom="@dimen/padding_xlarge"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xlarge" />

            <Switch
                android:id="@+id/switchRecommended"
                style="@style/FontSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/padding_xlarge"
                android:layout_marginEnd="@dimen/margin_medium"
                android:checked="false"
                android:text="@string/recommended"
                android:textAlignment="viewStart"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/font_xlarge" />

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@color/separatorLight" />


            <TextView
                style="@style/FontSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:text="@string/sort"
                android:textAlignment="viewStart"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/font_xlarge" />

            <RadioGroup
                android:id="@+id/rgSort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_medium">

                <RadioButton
                    android:id="@+id/rbSortAZ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:paddingStart="@dimen/margin_small"
                    android:text="@string/a_z"
                    android:textAlignment="viewStart"
                    android:textColor="@drawable/sort_selector"
                    android:textSize="@dimen/font_large" />

                <RadioButton
                    android:id="@+id/rbSortZA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:paddingStart="@dimen/margin_small"
                    android:text="@string/z_a"
                    android:textAlignment="viewStart"
                    android:textColor="@drawable/sort_selector"
                    android:textSize="@dimen/font_large" />
            </RadioGroup>

            <TextView
                android:id="@+id/txtApplyFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/bg_curved_accent_filled"
                android:gravity="center"
                android:paddingStart="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_small"
                android:paddingEnd="@dimen/margin_medium"
                android:paddingBottom="@dimen/margin_small"
                android:text="@string/apply"
                android:textColor="@color/white"
                android:textSize="@dimen/font_lsmall" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>