<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:gravity="center"
    android:paddingTop="@dimen/padding_xxxlarge"
    android:paddingBottom="@dimen/padding_xxxlarge">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/lnrLoginContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/margin_xlarge"
            android:layout_marginEnd="@dimen/margin_xlarge"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_xxxlargeM"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:textAlignment="viewStart"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_mail"
                    android:inputType="phone"
                    android:lines="1"
                    android:paddingBottom="@dimen/margin_medium"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:textAlignment="viewStart"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingBottom="@dimen/margin_medium"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/bg_curved_accent_filled"
                android:gravity="center"
                android:paddingTop="@dimen/margin_small"
                android:paddingBottom="@dimen/margin_small"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/font_lsmall" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlOrContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lnrLoginContainer"
            android:layout_margin="@dimen/margin_medium">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/txtOr"
                android:background="@color/separatorLight" />

            <TextView
                android:id="@+id/txtOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="@string/or" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/txtOr"
                android:background="@color/separatorLight" />
        </RelativeLayout>

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlOrContainer"
            android:layout_marginStart="@dimen/margin_xlarge"
            android:layout_marginEnd="@dimen/margin_xlarge"
            android:background="@drawable/bg_curved_accent_filled"
            android:gravity="center"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/font_lsmall" />

        <include
            android:id="@+id/progressLogin"
            layout="@layout/view_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>